<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_bottle_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements">

            <EditText
                android:id="@+id/bottle_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bottle_name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_bottle_edit_domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/input_bottle_edit_name"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            app:layout_widthPercent="75%">

            <AutoCompleteTextView
                android:id="@+id/bottle_edit_domain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:completionThreshold="1"
                android:hint="@string/bottle_domain"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_bottle_edit_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/input_bottle_edit_domain"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/input_bottle_edit_domain"
            android:layout_toEndOf="@id/input_bottle_edit_domain"
            android:layout_below="@id/input_bottle_edit_domain"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            app:layout_widthPercent="25%">

            <EditText
                android:id="@+id/bottle_edit_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bottle_stock"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/bottle_edit_wine_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/input_bottle_edit_domain"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_big_margin"
            android:layout_marginStart="@dimen/horizontal_big_margin"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/bottle_edit_millesime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_edit_wine_color"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_big_margin"
            android:layout_marginStart="@dimen/horizontal_big_margin"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:spinnerMode="dropdown"/>

        <CheckBox
            android:id="@+id/bottle_edit_organic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_edit_millesime"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_big_margin"
            android:layout_marginStart="@dimen/horizontal_big_margin"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:textSize="@dimen/text_size"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/organic_farming" />

        <RatingBar
            android:id="@+id/bottle_edit_rating"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_edit_organic"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:numStars="5"
            android:progressDrawable="@drawable/rating"
            android:stepSize="1" />

        <RatingBar
            android:id="@+id/bottle_edit_price_rating"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_edit_rating"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:numStars="5"
            android:progressDrawable="@drawable/price_rating"
            android:stepSize="1" />

        <TextView
            android:id="@+id/bottle_edit_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_edit_price_rating"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_big_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_big_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements"
            android:hint="@string/bottle_edit_food"
            android:textSize="@dimen/text_size" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_bottle_edit_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/bottle_edit_food"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements">

            <AutoCompleteTextView
                android:id="@+id/bottle_edit_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/bottle_edit_person"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_bottle_edit_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/input_bottle_edit_person"
            android:layout_marginBottom="@dimen/vertical_big_margin_between_elements"
            android:layout_marginEnd="@dimen/horizontal_margin_between_elements"
            android:layout_marginStart="@dimen/horizontal_margin_between_elements"
            android:layout_marginTop="@dimen/vertical_big_margin_between_elements">

            <EditText
                android:id="@+id/bottle_edit_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bottle_edit_comments"
                android:inputType="textMultiLine|textCapSentences" />
        </android.support.design.widget.TextInputLayout>

    </android.support.percent.PercentRelativeLayout>
</ScrollView>