...
    <string name="bottle_edit_comments">Comments</string>
    <string name="bottle_edit_food">What to eat with</string>
    <string name="bottle_edit_person">Who to share it with</string>
    <string name="bottle_name">Name of the bottle</string>
    <string name="bottle_stock">Stock</string>
    <string name="bottle_recap">%1$s, %2$s</string>
    <plurals name="bottles_count">
        <item quantity="one">Total:\u00A0%1$d bottle</item>
        <item quantity="other">Total:\u00A0%1$d bottles</item>
    </plurals>
    <plurals name="bottles_count_placed">
        <item quantity="one">Placed:\u00A0%1$d</item>
        <item quantity="other">Placed:\u00A0%1$d</item>
    </plurals>
    <string name="bottles_count_detail">Red:\u00A0%1$d, White:\u00A0%2$d, Rosé:\u00A0%3$d, Champagne:\u00A0%4$d</string>
    <string name="bottles_stock">%1$d in stock</string>
    <string name="error_bottle_already_exists">There is the same bottle in the cellar (same domain, color, name and millesime).</string>
    <string name="global_merge">Merge</string>
    <string name="error_bottle_no_name">A bottle name is needed</string>
    <string name="global_ok">OK</string>
    <string name="filename_bottles" translatable="false">bottles</string>
    <string name="food_aperitif">Aperitif</string>
    <string name="food_cheese">Cheese</string>
    <string name="food_dessert">Dessert</string>
    <string name="food_exotic">Exotic food</string>
...
    <string name="store_bottle" translatable="false">bottle_%1$d</string>
    <string name="suggest_me_a_bottle_button">Please, suggest me a bottle</string>
    <string name="title_about">About</string>
    <string name="title_bottles">My bottles</string>
    <string name="title_caves">My cellars</string>
    <string name="title_create_bottle">Add a bottle</string>
    <string name="title_edit_bottle">Edit the bottle</string>
    <string name="title_main">My pocket cellar</string>
    <string name="title_suggest_bottle_search">Suggest me a bottle</string>
    <string name="wine_color_champagne">Champagne</string>
    <string name="wine_color_red">Red</string>
    <string name="wine_color_rose">Rosé</string>
    <string name="wine_color_white">White</string>
    <string name="about_license_detail">"THE BEER-WARE LICENSE" (Revision 42): <![CDATA[<myadridev@gmail.com>]]> wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return Adrien</string>
...
    <string name="highlight_bottle">Identify identical bottles</string>
    <string name="error_suggest_cave">No cellar but checked as required</string>
    <string name="suggest_bottle_cave_none">Any cellar</string>
    <string name="bottles_here">%1$d here</string>
    <string name="place_bottle_label">Place a bottle…</string>
    <string name="place_bottle_quantity">How many?</string>
    <string name="save">Save</string>
    <string name="detail_exit_confirmation">There are changes, lose them and quit or stay here?</string>
    <string name="cave_arrangement_warning">Warning:\u00A0after arrangement modifications, some placed bottles may become unplaced!</string>
    <string name="error_cave_bulk_not_enough">Incorrect capacity:\u00A0more bottles are already placed.</string>
    <string name="import_export">Import - Export</string>
    <string name="title_sync">Import - Export</string>
    <string name="sync_export">Export</string>
...
